# MW-Dube-Dashboard

./: DubeNotation.md  Elasticity.md  Forecast.md  README.md  Sources.md  pyproject.toml
mw_dube_dashboard/: __init__.py  cli.py  dash.py  extrapolate.py  preprocess.py  utils.py
mw_dube_dashboard/data/: Average-Wage-Per-Country-Per-Year.csv  Dube-Detail.json  Gdp-Per-Country.csv  Labour-Income-Percent-GDP-Per-Country-Per-Year.csv  Labour-Rate-Participation-Per-Year-Country.csv  Labour-Wage-Distribution-Per-Country-Year.csv  Min-Wage-Per-Country-Per-Year.csv  Population-Per-Country.csv
mw_dube_dashboard/data/extra/: Average-Wage-Per-Sex-Sector-Year-Country.csv  Min-Wage-To-Avg-Wage-Ratio.csv
mw_dube_dashboard/data/models/Share-of-income-(Deciles)/xgb-extrapolate/: basic-variant-state-2023-03-04_22-13-43.json  experiment_state-2023-03-04_22-13-43.json  trainable.pkl  tuner.pkl
mw_dube_dashboard/data/processed/: Wage-Data-Full.csv
